src/objects/OrdItem__c.object
<CustomObject>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>OrderId</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>OrdItems</relationshipLabel>
        <relationshipName>OrdItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>OrdItems</relationshipLabel>
        <relationshipName>OrdItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrdItem</label>
    <nameField>
        <label>OrdItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrdItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>